# mandelbrot

./: Cargo.toml  Makefile  README.md  cIterations.h  color.h  complex.h  gpu.cu  gpu.h  main.cpp  mandelbrot.h
.github/workflows/: rust.yml
src/: args.rs  color.rs  config.rs  main.cpp  main.cu  main.rs  mandelbrot.rs
