[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
image = "0.24.6"
itertools = "0.10.5"
num = "0.4"
num_cpus = "1.15.0"
